WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301910
REGRESSION(
302499@main
): Broke TestWebKitAPI.DatabaseTracker tests
https://bugs.webkit.org/show_bug.cgi?id=301910
Summary
REGRESSION(302499@main): Broke TestWebKitAPI.DatabaseTracker tests
Jonathan Bedard
Reported
2025-11-03 22:24:37 PST
302499@main
broke a number of TestWebKitAPI.DatabaseTracker tests. Example: TestWebKitAPI.DatabaseTracker.DeleteDatabase 2025-11-03 19:35:55.784 TestWebKitAPI[7245:3781197] NSEventConcurrentProcessingEnabled=NO ASSERTION FAILED: m_didBeginDeletion || deleteException == CheckedPtrDeleteCheckException::Yes /Volumes/Data/worker/Apple-Tahoe-Debug-Build/build/WebKitBuild/Debug/usr/local/include/wtf/CheckedRef.h(292) : WTF::CanMakeCheckedPtrBase<std::atomic<unsigned int>, unsigned int, std::atomic<bool>, WTF::CheckedPtrDeleteCheckException::No>::~CanMakeCheckedPtrBase() [StorageType = std::atomic<unsigned int>, PtrCounterType = unsigned int, DeletionFlagType = std::atomic<bool>, deleteException = WTF::CheckedPtrDeleteCheckException::No] 1 0x171f93737 WTF::CanMakeCheckedPtrBase<std::__1::atomic<unsigned int>, unsigned int, std::__1::atomic<bool>, (WTF::CheckedPtrDeleteCheckException)0>::~CanMakeCheckedPtrBase() 2 0x176a454f5 WTF::CanMakeThreadSafeCheckedPtr<WebCore::SQLiteDatabase, (WTF::DefaultedOperatorEqual)0, (WTF::CheckedPtrDeleteCheckException)0>::~CanMakeThreadSafeCheckedPtr() 3 0x176a452f9 WebCore::SQLiteDatabase::~SQLiteDatabase() 4 0x176a45515 WebCore::SQLiteDatabase::~SQLiteDatabase() 5 0x10e86633a TestWebKitAPI::addToDatabasesTable(WTF::String const&, WebCore::SecurityOriginData const&, WTF::String const&, WTF::String const&) 6 0x10e86b6e4 TestWebKitAPI::DatabaseTracker_DeleteDatabase_Test::TestBody() 7 0x10fc9d9d4 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 8 0x10fc5da46 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 9 0x10fc5d997 testing::Test::Run() 10 0x10fc5e87e testing::TestInfo::Run() 11 0x10fc5f85d testing::TestSuite::Run() 12 0x10fc6de60 testing::internal::UnitTestImpl::RunAllTests() 13 0x10fca25f4 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 14 0x10fc6d886 bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 15 0x10fc6d775 testing::UnitTest::Run() 16 0x10eccec01 RUN_ALL_TESTS() 17 0x10ecceb92 TestWebKitAPI::TestsController::run(int, char**) 18 0x10fc4615a main 19 0x7ff8119c5781 start Build:
https://build.webkit.org/#/builders/1694/builds/93
History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.DatabaseTracker.DeleteOriginWhenDeletingADatabaseFails&test=TestWebKitAPI.DatabaseTracker.DeleteOriginWhenDatabaseDoesNotExist&test=TestWebKitAPI.DatabaseTracker.DeleteOrigin&test=TestWebKitAPI.DatabaseTracker.DeleteDatabaseWhenDatabaseDoesNotExist&test=TestWebKitAPI.DatabaseTracker.DeleteDatabaseFileIfEmpty&test=TestWebKitAPI.DatabaseTracker.DeleteDatabase
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-03 22:24:48 PST
<
rdar://problem/163988071
>
Ryosuke Niwa
Comment 2
2025-11-03 22:45:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53377
EWS
Comment 3
2025-11-03 23:50:33 PST
Committed
302521@main
(0036bf7c6bac): <
https://commits.webkit.org/302521@main
> Reviewed commits have been landed. Closing PR #53377 and removing active labels.
Jonathan Bedard
Comment 4
2025-11-04 11:26:01 PST
iOS version of these tests are still broken:
https://build.webkit.org/#/builders/1713/builds/79
Jonathan Bedard
Comment 5
2025-11-04 11:26:27 PST
Still broken on iOS
Ryosuke Niwa
Comment 6
2025-11-04 17:11:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53430
EWS
Comment 7
2025-11-04 18:30:13 PST
Committed
302569@main
(d7477d168fbe): <
https://commits.webkit.org/302569@main
> Reviewed commits have been landed. Closing PR #53430 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug