REGRESSION(302499@main): Broke TestWebKitAPI.DatabaseTracker tests https://bugs.webkit.org/show_bug.cgi?id=301910 rdar://163988071

Reviewed by Sihui Liu.

Allocate SQLiteDatabase in heap to avoid debug assertion failures.

No new tests since there should be no behavioral changes.

* Source/WebCore/Modules/webdatabase/DatabaseTracker.cpp:
(WebCore::DatabaseTracker::deleteDatabaseFile):
(WebCore::DatabaseTracker::deleteDatabaseFileIfEmpty):

Canonical link: https://commits.webkit.org/302569@main